--- a/index.html
+++ b/index.html
@@ -1,12 +1,192 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Главная</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-header">
+      <img class="main-header-logo" alt="Логотип Седоны" src="#" />
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item current-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="/catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Поиск</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Избранное</span>
+            <span class="favorites-count">12</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <div class="container">
+        <img
+          class="welcome-img"
+          src="#"
+          alt="Добро пожаловать в великолепную Седону"
+        />
+      </div>
+      <section class="advantages">
+        <h1 class="sedona-info">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h1>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 class="visually-hidden">Плюсы Седоны</h2>
+        <div class="container">
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">
+                Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img class="advantages-img-city" src="#" alt="Город Седона" />
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+            <li class="advantages-item">
+              <img
+                class="advantages-img-bridge"
+                src="#"
+                alt="Мост дьявола в Седоне"
+              />
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="services">
+        <h2 class="services-title">
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p class="services-description">
+          Опытный персонал и качественное обслуживание!
+        </p>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3 class="services-name">Жильё</h3>
+            <p class="services-info">
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-name">Еда</h3>
+            <p class="services-info">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-name">Сувениры</h3>
+            <p class="services-info">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+        <div class="hotel-search">
+          <h2 class="hotel-search-title">Заинтересовались?</h2>
+          <p class="hotel-search-description">
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+          <a class="hotel-search-btn" href="#"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </a>
+        </div>
+      </section>
+      <section class="newsletter">
+        <div class="container">
+          <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
+          <p class="newsletter-description">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form
+            class="newsletter-form"
+            action="https://echo.htmlacademy.ru/"
+            method="post"
+          >
+            <label>
+              <input
+                class="field"
+                type="email"
+                name="email"
+                placeholder="Ваш e-mail"
+              />
+            </label>
+            <button class="newsletter-form-btn" type="submit">
+              Подписаться
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <div class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+        <address class="footer-contacts-address">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">
+            +7 (812) 812-12-12
+          </a>
+        </address>
+        <a class="htmlacademy" href="https://htmlacademy.ru/study">
+          <img class="logo-html" src="#" alt="Логотип htmlacademy" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
