--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-header-logo" alt="Логотип Седоны" src="#" />
+      <img
+        class="main-header-logo"
+        alt="Логотип Седоны"
+        src="images/logo1.svg"
+        width="140"
+        height="70"
+      />
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item current-item">
@@ -33,26 +39,31 @@
             <span class="favorites-count">12</span>
           </a>
         </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
-        </li>
       </ul>
+      <div class="navigation-item">
+        <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+      </div>
     </header>
     <main>
-      <div class="container">
-        <img
-          class="welcome-img"
-          src="#"
-          alt="Добро пожаловать в великолепную Седону"
-        />
-      </div>
-      <section class="advantages">
-        <h1 class="sedona-info">
-          Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </h1>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <h2 class="visually-hidden">Плюсы Седоны</h2>
+      <h1 class="visually-hidden">Город Седона</h1>
+      <section class="hero container">
+        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <div class="container">
+          <img
+            class="welcome-img"
+            src="images/welcome.svg"
+            alt="Welcome to the gorgeous Sedona"
+            width="458"
+            height="352"
+          />
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="advantages-wrapper container">
+          <h2 class="sedona-info">
+            Седона — небольшой городок в Аризоне, заслуживающий большего!
+          </h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-title">Настоящий городок</h3>
@@ -61,7 +72,13 @@
               </p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-img-city" src="#" alt="Город Седона" />
+              <img
+                class="advantages-img-city"
+                src="images/photo-1.jpg"
+                alt="Город Седона"
+                width="800"
+                height="385"
+              />
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
@@ -84,8 +101,10 @@
             <li class="advantages-item">
               <img
                 class="advantages-img-bridge"
-                src="#"
+                src="images/photo-2.jpg"
                 alt="Мост дьявола в Седоне"
+                width="800"
+                height="385"
               />
             </li>
             <li class="advantages-item">
@@ -98,44 +117,68 @@
         </div>
       </section>
       <section class="services">
-        <h2 class="services-title">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </h2>
-        <p class="services-description">
-          Опытный персонал и качественное обслуживание!
-        </p>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-name">Жильё</h3>
-            <p class="services-info">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-name">Еда</h3>
-            <p class="services-info">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-name">Сувениры</h3>
-            <p class="services-info">
-              Не только китайского, но и настоящего местного производства!
-            </p>
-          </li>
-        </ul>
-        <div class="hotel-search">
-          <h2 class="hotel-search-title">Заинтересовались?</h2>
-          <p class="hotel-search-description">
-            Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-            предложения гостиниц в Седоне
+        <div class="services-wrapper container">
+          <h2 class="services-title">
+            Приезжайте в Седону отдохнуть в комфорте и уюте!
+          </h2>
+          <p class="services-description">
+            Опытный персонал и качественное обслуживание!
           </p>
-          <a class="hotel-search-btn" href="#"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </a>
+          <ul class="services-list">
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="images/Vector2.svg"
+                alt="Иконка домика"
+                width="75"
+                height="72"
+              />
+              <h3 class="services-name">Жильё</h3>
+              <p class="services-info">
+                Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              </p>
+            </li>
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="images/food.svg"
+                alt="Иконка еды"
+                width="75"
+                height="72"
+              />
+              <h3 class="services-name">Еда</h3>
+              <p class="services-info">
+                Всегда заказывайте топовый фирменный бургер, вы не
+                разочаруетесь!
+              </p>
+            </li>
+            <li class="services-item">
+              <img
+                class="services-img"
+                src="images/Vector1.svg"
+                alt="Иконка подарка"
+                width="75"
+                height="72"
+              />
+              <h3 class="services-name">Сувениры</h3>
+              <p class="services-info">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </li>
+          </ul>
+          <div class="hotel-search">
+            <h2 class="hotel-search-title">Заинтересовались?</h2>
+            <p class="hotel-search-description">
+              Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+              предложения гостиниц в Седоне
+            </p>
+            <a class="hotel-search-btn" href="#"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ </a>
+          </div>
         </div>
       </section>
       <section class="newsletter">
         <div class="container">
-          <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
+          <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
           <p class="newsletter-description">
             Только полезная информация и никакого спама, честное бойскаутское!
           </p>
@@ -160,21 +203,62 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="footer-social">
+      <div class="main-footer-wrapper container">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="#">
               <span class="visually-hidden">ВКонтакте</span>
+              <svg
+                alt="Иконка ВКонтакте"
+                width="25"
+                height="15"
+                viewBox="0 0 25 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17045 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z"
+                  fill="#83B3D3"
+                />
+              </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="button" href="#">
               <span class="visually-hidden">Телеграм</span>
+              <svg
+                alt="Иконка Телеграм"
+                width="18"
+                height="17"
+                viewBox="0 0 18 17"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z"
+                  fill="#83B3D3"
+                />
+              </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="button" href="#">
               <span class="visually-hidden">Ютуб</span>
+              <svg
+                alt="Иконка Ютуб"
+                width="23"
+                height="18"
+                viewBox="0 0 23 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z"
+                  fill="#83B3D3"
+                />
+              </svg>
             </a>
           </li>
         </ul>
@@ -184,7 +268,13 @@
           </a>
         </address>
         <a class="htmlacademy" href="https://htmlacademy.ru/study">
-          <img class="logo-html" src="#" alt="Логотип htmlacademy" />
+          <img
+            class="logo-html"
+            src="images/logo_htmlacademy.svg"
+            alt="Логотип htmlacademy"
+            width="115"
+            height="33"
+          />
         </a>
       </div>
     </footer>
