--- a/catalog.html
+++ b/catalog.html
@@ -322,8 +322,8 @@
         </div>
       </section>
       <section class="newsletter">
-        <h3 class="newsletter-title">Подпишитесь на рассылку</h3>
-        <p class="newsletter-description">
+        <h3 class="newsletter-title-black">Подпишитесь на рассылку</h3>
+        <p class="newsletter-description-black">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form
