--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li class="services-item">
               <img
                 class="services-img"
-                src="images/Vector2.svg"
+                src="images/home.svg"
                 alt="Иконка домика"
                 width="75"
                 height="72"
@@ -158,7 +158,7 @@
             <li class="services-item">
               <img
                 class="services-img"
-                src="images/Vector1.svg"
+                src="images/gift.svg"
                 alt="Иконка подарка"
                 width="75"
                 height="72"
@@ -212,7 +212,6 @@
             <a class="button" href="#">
               <span class="visually-hidden">ВКонтакте</span>
               <svg
-                alt="Иконка ВКонтакте"
                 width="25"
                 height="15"
                 viewBox="0 0 25 15"
@@ -232,7 +231,6 @@
             <a class="button" href="#">
               <span class="visually-hidden">Телеграм</span>
               <svg
-                alt="Иконка Телеграм"
                 width="18"
                 height="17"
                 viewBox="0 0 18 17"
@@ -250,7 +248,6 @@
             <a class="button" href="#">
               <span class="visually-hidden">Ютуб</span>
               <svg
-                alt="Иконка Ютуб"
                 width="23"
                 height="18"
                 viewBox="0 0 23 18"
