--- a/catalog.html
+++ b/catalog.html
@@ -321,84 +321,36 @@
                     в избранное
                   </button>
                   <div class="numb-stars">
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                    <ul class="numb-container">
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
+                      </li>
+                    </ul>
                   </div>
                   <span class="hotel-rating">Рейтинг: 8,5</span>
                 </div>
@@ -425,84 +377,36 @@
                     в избранном
                   </button>
                   <div class="numb-stars">
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                    <ul class="numb-container">
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
+                      </li>
+                    </ul>
                   </div>
                   <span class="hotel-rating">Рейтинг: 9,2</span>
                 </div>
@@ -526,65 +430,29 @@
                     в избранное
                   </button>
                   <div class="numb-stars">
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                    <ul class="numb-container">
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
+                      </li>
+                    </ul>
                   </div>
                   <span class="hotel-rating">Рейтинг: 6,9</span>
                 </div>
@@ -608,44 +476,22 @@
                     в избранное
                   </button>
                   <div class="numb-stars">
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                    <ul class="numb-container">
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
-                    <svg
-                      width="18"
-                      height="17"
-                      viewBox="0 0 18 17"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <g clip-path="url(#clip0_118934_80)">
-                        <path
-                          d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z"
-                          fill="#83B3D3"
+                      </li>
+                      <li>
+                        <img
+                          src="images/hotel-star.svg"
+                          width="18"
+                          height="17"
                         />
-                      </g>
-                      <defs>
-                        <clipPath id="clip0_118934_80">
-                          <rect width="18" height="17" fill="white" />
-                        </clipPath>
-                      </defs>
-                    </svg>
+                      </li>
+                    </ul>
                   </div>
                   <span class="hotel-rating">Рейтинг: 5,0</span>
                 </div>
